--- a/UpSkill_Prototype/Config/DefaultGame.ini
+++ b/UpSkill_Prototype/Config/DefaultGame.ini
@@ -1,3 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C5F3243E4C653161A995D19C8EC62DBC
-ProjectName=First Person BP Game Template
+ProjectName=Horde Mode - Upskill
+
