--- a/UpSkill_Prototype/UpSkill_Prototype.uproject
+++ b/UpSkill_Prototype/UpSkill_Prototype.uproject
@@ -2,5 +2,14 @@
 	"FileVersion": 3,
 	"EngineAssociation": "4.27",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Plugins": [
+		{
+			"Name": "PixWinPlugin",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
+		}
+	]
 }
