--- a/UpSkill_Prototype/Config/DefaultGame.ini
+++ b/UpSkill_Prototype/Config/DefaultGame.ini
@@ -8,7 +8,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 StagingDirectory=(Path="F:/Upskill Builds")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -72,6 +72,6 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="/Game/BluePrints/FirstPersonBP/Maps/Horde-Mode")
 +MapsToCook=(FilePath="/Game/BluePrints/FirstPersonBP/Maps/Main_Menu")
++MapsToCook=(FilePath="/Game/BluePrints/FirstPersonBP/Maps/Horde-Mode")
 
