Updated Some Stuff

--- a/UpSkill_Prototype/Config/DefaultEngine.ini
+++ b/UpSkill_Prototype/Config/DefaultEngine.ini
@@ -21,3 +21,9 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.RendererSettings]
+r.VirtualTextures=False
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
